tests/specs/fmt/yaml/wrong_file_ignore.out
Error formatting: [WILDCARD]wrong_file_ignore.yaml
   parse error at line 5, column 1
  |
5 | {{something crazy
  | ^

Checked 1 file
